tests/ui/nefeli/types/union/union-empty.rs
// Union Types: 7f345296-9cec-4bb7-a0f1-7abf0b45bd3c
union U {} //~ ERROR unions cannot have zero fields

fn main() {}